--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 <a href="portfolio.html"> 
 
-<img class="portfoliobutton" class="img-circle" src="cloud.png" style="width:200px;height:200px;">
-<p class="labels">Portfolio</p>
+<img class="portfoliobutton" class="img-circle" src=".png" style="width:200px;height:200px;">
+<p style= "font-size: 32px;" class="labels">Portfolio</p>
 </a>
 </div>
 </div>
