added meta data
meta

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
 <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
 <link href='aboutme.css' rel='stylesheet'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="claudia, barrall, web, design, designer, 2d, animation, animator, portfolio, specialist, developer, html, css, javascript, front, end, front-end, barral, artist, graphics, illustrator, london, uk, essex, norwich, based, generalist, java, script, development, web-design, web-designer, digital, art, arts, graduate" />
   <title>Claudia Barrall</title>
 </head>
 
